workshop04/nwapp_ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: nwapp-ing
    labels:
        app: northwind
    annotations:
        kubernetes.io/ingress.class: "nginx"
spec:
    rules:
    - host: "v1.nwapp.104.248.99.25.nip.io"
      http:
        paths:
        - path: /
          backend: 
            serviceName: nwapp-svc
            servicePort: 80
    - host: "v2.nwapp.104.248.99.25.nip.io"
      http:
        paths:
        - path: /
          backend: 
            serviceName: nwappv2-svc
            servicePort: 8080
